@@ -1,3 +1,8 @@
+2010-06-25  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/mupdf/epdf_mupdf_page.c:
+	remove time measurement
+
 2010-06-09  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/mupdf/Makefile.am:
